[gd_scene load_steps=4 format=3 uid="uid://cgwuhcyd821o0"]

[ext_resource type="Script" uid="uid://t1g2gkbuyl67" path="res://src/projectiles/barrel_ball/barrel_ball.gd" id="1_eabuo"]
[ext_resource type="Texture2D" uid="uid://bvnir542ipan0" path="res://assets/barrel3.png" id="2_xw340"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xw340"]
radius = 4.99457
height = 12.7675

[node name="BarrelBall" type="RigidBody2D"]
collision_layer = 8
collision_mask = 14
contact_monitor = true
max_contacts_reported = 50
linear_damp = 0.25
script = ExtResource("1_eabuo")
damage = 3
piercing = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 0.596903
shape = SubResource("CapsuleShape2D_xw340")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.107143, 0.107143)
texture = ExtResource("2_xw340")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
